--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -72,7 +72,8 @@ body {
   color: var(--default-color);
   background-color: var(--background-color);
   font-family: var(--default-font);
-  margin: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 a {
